Edited navMenu and added usings in _Imports

--- a/PermissionManagementApp/Components/_Imports.razor
+++ b/PermissionManagementApp/Components/_Imports.razor
@@ -8,3 +8,6 @@
 @using Microsoft.JSInterop
 @using PermissionManagementApp
 @using PermissionManagementApp.Components
+@using PermissionManagementApp.Services
+@using PermissionManagementApp.Data.Models
+@using PermissionManagementApp.Data
