--- a/PermissionManagementApp/Components/Layout/NavMenu.razor
+++ b/PermissionManagementApp/Components/Layout/NavMenu.razor
@@ -25,6 +25,24 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
             </NavLink>
         </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/manageUsers">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Users
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/manageGroups">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Groups
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/managePermissions">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Permissions
+            </NavLink>
+        </div>
     </nav>
 </div>
 
