--- a/PermissionManagementApp/Components/Pages/Home.razor
+++ b/PermissionManagementApp/Components/Pages/Home.razor
@@ -1,7 +1,10 @@
 ﻿@page "/"
+<ProtectedPage>
 
-<PageTitle>Home</PageTitle>
+	<PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
+	<h1>Hello, world!</h1>
 
-Welcome to your new app.
+	Welcome to your new app.
+
+</ProtectedPage>
