--- a/PermissionManagementApp/Components/Layout/NavMenu.razor
+++ b/PermissionManagementApp/Components/Layout/NavMenu.razor
@@ -32,13 +32,13 @@
 			</NavLink>
 		</div>
 
-		<div>
+		<div class ="nav-item px-3">
 			<NavLink class="nav-link" href="/assignUserPermissions">
 				<span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Assign userpermissions
 			</NavLink>
 		</div>
 
-		<div>
+		<div class="nav-item px-3">
 			<NavLink class="nav-link" href="/assignGroupPermissions">
 				<span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Assign grouppermissions
 			</NavLink>
