--- a/PermissionManagementApp/Components/Layout/NavMenu.razor
+++ b/PermissionManagementApp/Components/Layout/NavMenu.razor
@@ -15,44 +15,18 @@
 		</div>
 
 		<div class="nav-item px-3">
-			<NavLink class="nav-link" href="/manageUsers">
-				<span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Users
+			<NavLink class="nav-link" href="/groupsmanagement">
+				<span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Groupsmanagement
 			</NavLink>
 		</div>
-
 		<div class="nav-item px-3">
-			<NavLink class="nav-link" href="/manageGroups">
-				<span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Groups
+			<NavLink class="nav-link" href="/usermanagement">
+				<span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Usermanagement
 			</NavLink>
 		</div>
-
 		<div class="nav-item px-3">
-			<NavLink class="nav-link" href="/managePermissions">
-				<span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Permissions
-			</NavLink>
-		</div>
-
-		<div class ="nav-item px-3">
-			<NavLink class="nav-link" href="/assignUserPermissions">
-				<span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Assign userpermissions
-			</NavLink>
-		</div>
-
-		<div class="nav-item px-3">
-			<NavLink class="nav-link" href="/assignGroupPermissions">
-				<span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Assign grouppermissions
-			</NavLink>
-		</div>
-
-		<div class="nav-item px-3">
-			<NavLink class="nav-link" href="/assignUserGroups">
-				<span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Assign user to groups
-			</NavLink>
-		</div>
-
-		<div class="nav-item px-3">
-			<NavLink class="nav-link" href="/users">
-				<span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Users new
+			<NavLink class="nav-link" href="/permissionmanagement">
+				<span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Permissionmanagement
 			</NavLink>
 		</div>
 
