--- a/PermissionManagementApp/Components/_Imports.razor
+++ b/PermissionManagementApp/Components/_Imports.razor
@@ -10,4 +10,5 @@
 @using PermissionManagementApp.Components
 @using PermissionManagementApp.Services
 @using PermissionManagementApp.Data.Models
+@using PermissionManagementApp.Data.Models.ViewModels
 @using PermissionManagementApp.Data
