--- a/PermissionManagementApp/Components/AuthView.razor
+++ b/PermissionManagementApp/Components/AuthView.razor
@@ -1,32 +1,48 @@
 ﻿@inject AuthService AuthService
 @inject RoleService RoleService
 
-@if (hasPermission && ChildContent != null)
+@if (!isLoaded)
 {
-	@ChildContent
+    <p>Lade Berechtigungen...</p>
+}
+else if (hasPermission)
+{
+    @ChildContent
 }
 else
 {
-	<ProtectedPage></ProtectedPage>
+    <p>You have no access with your user.</p>
+    <ProtectedPage />
 }
 
 @code {
-	[Parameter]
-	public string Permission { get; set; }
+    [Parameter] public string Permission { get; set; } = string.Empty;
+    [Parameter] public RenderFragment? ChildContent { get; set; }
 
-	[Parameter]
-	public RenderFragment? ChildContent { get; set; }
+    private bool hasPermission = false;
+    private bool isLoaded = false;
 
-	private bool hasPermission = false;
+    protected override async Task OnInitializedAsync()
+    {
+        var userId = AuthService.GetCurrentUserId();
 
-	protected override async Task OnParametersSetAsync()
-	{
-		var userId = AuthService.GetCurrentUserId();
+        if (userId.HasValue)
+        {
+            var requiredPermissions = Permission
+                .Split(',', StringSplitOptions.RemoveEmptyEntries | StringSplitOptions.TrimEntries);
 
-		if (userId.HasValue)
-		{
-			hasPermission = await RoleService.HasPermissionAsync(userId.Value, Permission);
-			await InvokeAsync(StateHasChanged);
-		}
-	}
+            foreach (var perm in requiredPermissions)
+            {
+                if (await RoleService.HasPermissionAsync(userId.Value, perm))
+                {
+                    hasPermission = true;
+                    break;
+                }
+            }
+        }
+
+        isLoaded = true;
+
+        StateHasChanged();
+    }
 }
